WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121245
REGRESSION (
r155615
): Lots of reftests fail with single line or single pixel differences
https://bugs.webkit.org/show_bug.cgi?id=121245
Summary
REGRESSION (r155615): Lots of reftests fail with single line or single pixel ...
Alexey Proskuryakov
Reported
2013-09-12 12:16:33 PDT
Looks like <
http://trac.webkit.org/changeset/155615
> may be our first ever test for PDF in subframe, and so it's causing the same issue that Tim fixed for PDF as image in
bug 120963
. Lots of completely unrelated tests are failing: run-webkit-tests fast/history/history-back-while-pdf-in-pagecache.html fast/multicol/newmulticol --child-processes=1 --no-retry-failures
Attachments
patch
(6.28 KB, patch)
2013-09-12 13:59 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-09-12 12:23:54 PDT
I'm looking at this.
Tim Horton
Comment 2
2013-09-12 13:59:51 PDT
Created
attachment 211472
[details]
patch
WebKit Commit Bot
Comment 3
2013-09-13 03:07:39 PDT
Comment on
attachment 211472
[details]
patch Clearing flags on attachment: 211472 Committed
r155683
: <
http://trac.webkit.org/changeset/155683
>
WebKit Commit Bot
Comment 4
2013-09-13 03:07:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug